--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,24 +5,72 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="./custom.css" />
+  <link rel="stylesheet" href="./assets/css/custom.css" />
   <link rel="stylesheet" href="./node_modules/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css" />
 </header>
 
 <body>
-  <div class="row">
-    <div class="col-md-4">
-      <div ng-controller="SideMenuController">
-        <div>
-          <ul class="list-group">
-            <li class="list-group-item" ng-repeat="coordenate in coordenates">
+  <div ng-controller="AppController">
+    <div class="row">
+      <div class="col-md-2">
+        <input ng-model="filterText" placeholder="Procurar" class="form-control mb-3" />
+        <button>Adicionar ponto</button>
+        <ul class="list-group">
+          <li class="list-group-item" ng-repeat="coordenate in coordenates | filter:filterText">
+            <button class="btn btn-default btn-block text-left" ng-click="loadCoordenate(coordenate._id)">
               {{coordenate.name}}
-            </li>
-          </ul>
-        </div>
+            </button>
+          </li>
+        </ul>
       </div>
+      <div id="map" class="flex-fill"></div>
     </div>
-    <div id="map" class="col-md-8"></div>
+
+    <!-- modal -->
+    <div class="modal fade" id="formModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Dados do ponto</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>          
+          <div class="modal-body">
+            <form ng-submit="SubmitForm()">
+              <div class="form-group">
+                <label for="name">Nome do Ponto</label>
+                <input id="name" ng-model="coordenate.name" class="form-control"/>
+              </div>
+              <div class="form-group">
+                <label for="color">Cor</label>
+                <input id="color" ng-model="coordenate.color" class="form-control"/>
+              </div>    
+              <a class="btn btn-flat btn-info pull-right" ng-click="coordenate.attributes.push([])">Adicionar atributo</a>  
+              <div ng-repeat="attribute in coordenate.attributes">
+                <div class="input-group">
+                  <div class="form-group mr-2">
+                    <label>Atributo</label>
+                    <input ng-model="attribute.name" class="form-control" required/>
+                  </div>
+                  <div class="form-group">
+                    <label>Valor</label>
+                    <input ng-model="attribute.value" class="form-control" required/>
+                  </div>
+                  <a ng-click="coordenate.attributes.splice($index,1)">
+                    <i class="fa fa-trash"></i>
+                  </a>
+                </div>
+              </div>
+              <hr>
+              <button class="btn btn-success btn-flat pull-right ml-2">Salvar alterações</button>
+              <button class="btn btn-danger btn-flat pull-right">Remover ponto</button>
+            </form>
+          </div>
+        </div>
+    </div>
+
   </div>
 </body>
 <script src="./node_modules/angular/angular.min.js"></script>
